--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "bcrypt": "^5.1.1",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
