--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "keywords": [],
   "description": "",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.4"
   }
