--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.1",
     "fs": "^0.0.1-security",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
